--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.3/leaflet.css'>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <title>Segnalazioni Comune Bergamo</title>
+  <title>JS test The Boats</title>
 </head>
 
 <body>
